Practica2/fuente/gjsonbParser.java
package fuente;

// Generated from gjsonbParser.g4 by ANTLR 4.7.1
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class gjsonbParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		CONTEXT=1, LLAVEA=2, LLAVEC=3, CA=4, CC=5, DOSP=6, COMA=7, WS=8, INTRO=9, 
		COMILLAS=10, ID=11, NAME=12, LABEL=13, ES=14, ENG=15, PROPERTIES=16, TYPEOF=17, 
		USEDBY=18, ISLIST=19, MULTIPLICITYMAX=20, MULTIPLICITYMIN=21, INHERITS=22, 
		OPTIONAL=23, TO=24, FROM=25, REVERSENAME=26, LABELREVERSENAME=27, RUTA=28, 
		BOOL=29, TEXTO=30, GRAPHS=31, TEXTOCONTEXT=32, CLASE=33, PROPIEDAD=34, 
		RELACION=35;
	public static final int
		RULE_fichero = 0, RULE_context = 1, RULE_textoc = 2, RULE_graphs = 3, 
		RULE_grafo = 4, RULE_dentroGrafo = 5, RULE_nodo = 6, RULE_id = 7, RULE_name = 8, 
		RULE_label = 9, RULE_properties = 10, RULE_prop = 11, RULE_reverseName = 12, 
		RULE_labelReverseName = 13, RULE_from = 14, RULE_to = 15, RULE_typeOf = 16, 
		RULE_usedby = 17, RULE_multiplicityMax = 18, RULE_multiplicityMin = 19, 
		RULE_inherits = 20, RULE_optional = 21, RULE_isList = 22, RULE_clase = 23, 
		RULE_propiedad = 24, RULE_relacion = 25, RULE_textoEs = 26, RULE_textoIn = 27, 
		RULE_textoEsReverse = 28, RULE_textoInReverse = 29, RULE_nombreGrafo = 30, 
		RULE_tipoGrafo = 31;
	public static final String[] ruleNames = {
		"fichero", "context", "textoc", "graphs", "grafo", "dentroGrafo", "nodo", 
		"id", "name", "label", "properties", "prop", "reverseName", "labelReverseName", 
		"from", "to", "typeOf", "usedby", "multiplicityMax", "multiplicityMin", 
		"inherits", "optional", "isList", "clase", "propiedad", "relacion", "textoEs", 
		"textoIn", "textoEsReverse", "textoInReverse", "nombreGrafo", "tipoGrafo"
	};

	private static final String[] _LITERAL_NAMES = {
		null, "'\"@context\":'", "'{'", "'}'", "'['", "']'", "':'", "','", "' '", 
		"'\r\n'", "'\"'", null, "'\"name\":'", "'\"label\":'", "'\"es\":'", null, 
		null, "'\"typeOf\":'", "'\"usedby\":'", "'\"isList\":'", "'\"multiplicityMax\":'", 
		"'\"multiplicityMin\":'", "'\"inherits\":'", "'\"optional\":'", "'\"to\":'", 
		"'\"from\":'", "'\"reverseName\":'", "'\"labelReverseName\":'", "'\"http://'", 
		null, null, "'\"graphs\":'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, "CONTEXT", "LLAVEA", "LLAVEC", "CA", "CC", "DOSP", "COMA", "WS", 
		"INTRO", "COMILLAS", "ID", "NAME", "LABEL", "ES", "ENG", "PROPERTIES", 
		"TYPEOF", "USEDBY", "ISLIST", "MULTIPLICITYMAX", "MULTIPLICITYMIN", "INHERITS", 
		"OPTIONAL", "TO", "FROM", "REVERSENAME", "LABELREVERSENAME", "RUTA", "BOOL", 
		"TEXTO", "GRAPHS", "TEXTOCONTEXT", "CLASE", "PROPIEDAD", "RELACION"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "gjsonbParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public gjsonbParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class FicheroContext extends ParserRuleContext {
		public TerminalNode LLAVEA() { return getToken(gjsonbParser.LLAVEA, 0); }
		public ContextContext context() {
			return getRuleContext(ContextContext.class,0);
		}
		public GraphsContext graphs() {
			return getRuleContext(GraphsContext.class,0);
		}
		public TerminalNode LLAVEC() { return getToken(gjsonbParser.LLAVEC, 0); }
		public FicheroContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_fichero; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof gjsonbParserVisitor ) return ((gjsonbParserVisitor<? extends T>)visitor).visitFichero(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FicheroContext fichero() throws RecognitionException {
		FicheroContext _localctx = new FicheroContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_fichero);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(64);
			match(LLAVEA);
			setState(65);
			context();
			setState(66);
			graphs();
			setState(67);
			match(LLAVEC);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ContextContext extends ParserRuleContext {
		public TerminalNode CONTEXT() { return getToken(gjsonbParser.CONTEXT, 0); }
		public List<TextocContext> textoc() {
			return getRuleContexts(TextocContext.class);
		}
		public TextocContext textoc(int i) {
			return getRuleContext(TextocContext.class,i);
		}
		public ContextContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_context; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof gjsonbParserVisitor ) return ((gjsonbParserVisitor<? extends T>)visitor).visitContext(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ContextContext context() throws RecognitionException {
		ContextContext _localctx = new ContextContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_context);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(69);
			match(CONTEXT);
			setState(73);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==TEXTOCONTEXT) {
				{
				{
				setState(70);
				textoc();
				}
				}
				setState(75);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TextocContext extends ParserRuleContext {
		public TerminalNode TEXTOCONTEXT() { return getToken(gjsonbParser.TEXTOCONTEXT, 0); }
		public TextocContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_textoc; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof gjsonbParserVisitor ) return ((gjsonbParserVisitor<? extends T>)visitor).visitTextoc(this);
			else return visitor.visitChildren(this);
		}
	}

	public final TextocContext textoc() throws RecognitionException {
		TextocContext _localctx = new TextocContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_textoc);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(76);
			match(TEXTOCONTEXT);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class GraphsContext extends ParserRuleContext {
		public TerminalNode GRAPHS() { return getToken(gjsonbParser.GRAPHS, 0); }
		public List<GrafoContext> grafo() {
			return getRuleContexts(GrafoContext.class);
		}
		public GrafoContext grafo(int i) {
			return getRuleContext(GrafoContext.class,i);
		}
		public GraphsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_graphs; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof gjsonbParserVisitor ) return ((gjsonbParserVisitor<? extends T>)visitor).visitGraphs(this);
			else return visitor.visitChildren(this);
		}
	}

	public final GraphsContext graphs() throws RecognitionException {
		GraphsContext _localctx = new GraphsContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_graphs);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(78);
			match(GRAPHS);
			setState(82);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==LLAVEA) {
				{
				{
				setState(79);
				grafo();
				}
				}
				setState(84);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class GrafoContext extends ParserRuleContext {
		public TerminalNode LLAVEA() { return getToken(gjsonbParser.LLAVEA, 0); }
		public NombreGrafoContext nombreGrafo() {
			return getRuleContext(NombreGrafoContext.class,0);
		}
		public DentroGrafoContext dentroGrafo() {
			return getRuleContext(DentroGrafoContext.class,0);
		}
		public TerminalNode LLAVEC() { return getToken(gjsonbParser.LLAVEC, 0); }
		public TerminalNode DOSP() { return getToken(gjsonbParser.DOSP, 0); }
		public GrafoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_grafo; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof gjsonbParserVisitor ) return ((gjsonbParserVisitor<? extends T>)visitor).visitGrafo(this);
			else return visitor.visitChildren(this);
		}
	}

	public final GrafoContext grafo() throws RecognitionException {
		GrafoContext _localctx = new GrafoContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_grafo);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(85);
			match(LLAVEA);
			setState(86);
			nombreGrafo();
			setState(88);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==DOSP) {
				{
				setState(87);
				match(DOSP);
				}
			}

			setState(90);
			dentroGrafo();
			setState(91);
			match(LLAVEC);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DentroGrafoContext extends ParserRuleContext {
		public TerminalNode LLAVEA() { return getToken(gjsonbParser.LLAVEA, 0); }
		public TipoGrafoContext tipoGrafo() {
			return getRuleContext(TipoGrafoContext.class,0);
		}
		public TerminalNode DOSP() { return getToken(gjsonbParser.DOSP, 0); }
		public TerminalNode LLAVEC() { return getToken(gjsonbParser.LLAVEC, 0); }
		public List<NodoContext> nodo() {
			return getRuleContexts(NodoContext.class);
		}
		public NodoContext nodo(int i) {
			return getRuleContext(NodoContext.class,i);
		}
		public DentroGrafoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_dentroGrafo; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof gjsonbParserVisitor ) return ((gjsonbParserVisitor<? extends T>)visitor).visitDentroGrafo(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DentroGrafoContext dentroGrafo() throws RecognitionException {
		DentroGrafoContext _localctx = new DentroGrafoContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_dentroGrafo);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(93);
			match(LLAVEA);
			setState(94);
			tipoGrafo();
			setState(95);
			match(DOSP);
			setState(99);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==LLAVEA) {
				{
				{
				setState(96);
				nodo();
				}
				}
				setState(101);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(102);
			match(LLAVEC);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class NodoContext extends ParserRuleContext {
		public TerminalNode LLAVEA() { return getToken(gjsonbParser.LLAVEA, 0); }
		public TerminalNode LLAVEC() { return getToken(gjsonbParser.LLAVEC, 0); }
		public List<IdContext> id() {
			return getRuleContexts(IdContext.class);
		}
		public IdContext id(int i) {
			return getRuleContext(IdContext.class,i);
		}
		public List<NameContext> name() {
			return getRuleContexts(NameContext.class);
		}
		public NameContext name(int i) {
			return getRuleContext(NameContext.class,i);
		}
		public List<LabelContext> label() {
			return getRuleContexts(LabelContext.class);
		}
		public LabelContext label(int i) {
			return getRuleContext(LabelContext.class,i);
		}
		public List<PropertiesContext> properties() {
			return getRuleContexts(PropertiesContext.class);
		}
		public PropertiesContext properties(int i) {
			return getRuleContext(PropertiesContext.class,i);
		}
		public List<ReverseNameContext> reverseName() {
			return getRuleContexts(ReverseNameContext.class);
		}
		public ReverseNameContext reverseName(int i) {
			return getRuleContext(ReverseNameContext.class,i);
		}
		public List<LabelReverseNameContext> labelReverseName() {
			return getRuleContexts(LabelReverseNameContext.class);
		}
		public LabelReverseNameContext labelReverseName(int i) {
			return getRuleContext(LabelReverseNameContext.class,i);
		}
		public List<FromContext> from() {
			return getRuleContexts(FromContext.class);
		}
		public FromContext from(int i) {
			return getRuleContext(FromContext.class,i);
		}
		public List<ToContext> to() {
			return getRuleContexts(ToContext.class);
		}
		public ToContext to(int i) {
			return getRuleContext(ToContext.class,i);
		}
		public List<TypeOfContext> typeOf() {
			return getRuleContexts(TypeOfContext.class);
		}
		public TypeOfContext typeOf(int i) {
			return getRuleContext(TypeOfContext.class,i);
		}
		public List<UsedbyContext> usedby() {
			return getRuleContexts(UsedbyContext.class);
		}
		public UsedbyContext usedby(int i) {
			return getRuleContext(UsedbyContext.class,i);
		}
		public List<MultiplicityMaxContext> multiplicityMax() {
			return getRuleContexts(MultiplicityMaxContext.class);
		}
		public MultiplicityMaxContext multiplicityMax(int i) {
			return getRuleContext(MultiplicityMaxContext.class,i);
		}
		public List<MultiplicityMinContext> multiplicityMin() {
			return getRuleContexts(MultiplicityMinContext.class);
		}
		public MultiplicityMinContext multiplicityMin(int i) {
			return getRuleContext(MultiplicityMinContext.class,i);
		}
		public List<InheritsContext> inherits() {
			return getRuleContexts(InheritsContext.class);
		}
		public InheritsContext inherits(int i) {
			return getRuleContext(InheritsContext.class,i);
		}
		public List<OptionalContext> optional() {
			return getRuleContexts(OptionalContext.class);
		}
		public OptionalContext optional(int i) {
			return getRuleContext(OptionalContext.class,i);
		}
		public List<IsListContext> isList() {
			return getRuleContexts(IsListContext.class);
		}
		public IsListContext isList(int i) {
			return getRuleContext(IsListContext.class,i);
		}
		public NodoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_nodo; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof gjsonbParserVisitor ) return ((gjsonbParserVisitor<? extends T>)visitor).visitNodo(this);
			else return visitor.visitChildren(this);
		}
	}

	public final NodoContext nodo() throws RecognitionException {
		NodoContext _localctx = new NodoContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_nodo);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(104);
			match(LLAVEA);
			setState(122);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << ID) | (1L << NAME) | (1L << LABEL) | (1L << PROPERTIES) | (1L << TYPEOF) | (1L << USEDBY) | (1L << ISLIST) | (1L << MULTIPLICITYMAX) | (1L << MULTIPLICITYMIN) | (1L << INHERITS) | (1L << OPTIONAL) | (1L << TO) | (1L << FROM) | (1L << REVERSENAME) | (1L << LABELREVERSENAME))) != 0)) {
				{
				setState(120);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case ID:
					{
					setState(105);
					id();
					}
					break;
				case NAME:
					{
					setState(106);
					name();
					}
					break;
				case LABEL:
					{
					setState(107);
					label();
					}
					break;
				case PROPERTIES:
					{
					setState(108);
					properties();
					}
					break;
				case REVERSENAME:
					{
					setState(109);
					reverseName();
					}
					break;
				case LABELREVERSENAME:
					{
					setState(110);
					labelReverseName();
					}
					break;
				case FROM:
					{
					setState(111);
					from();
					}
					break;
				case TO:
					{
					setState(112);
					to();
					}
					break;
				case TYPEOF:
					{
					setState(113);
					typeOf();
					}
					break;
				case USEDBY:
					{
					setState(114);
					usedby();
					}
					break;
				case MULTIPLICITYMAX:
					{
					setState(115);
					multiplicityMax();
					}
					break;
				case MULTIPLICITYMIN:
					{
					setState(116);
					multiplicityMin();
					}
					break;
				case INHERITS:
					{
					setState(117);
					inherits();
					}
					break;
				case OPTIONAL:
					{
					setState(118);
					optional();
					}
					break;
				case ISLIST:
					{
					setState(119);
					isList();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				setState(124);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(125);
			match(LLAVEC);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class IdContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(gjsonbParser.ID, 0); }
		public ClaseContext clase() {
			return getRuleContext(ClaseContext.class,0);
		}
		public PropiedadContext propiedad() {
			return getRuleContext(PropiedadContext.class,0);
		}
		public RelacionContext relacion() {
			return getRuleContext(RelacionContext.class,0);
		}
		public IdContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_id; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof gjsonbParserVisitor ) return ((gjsonbParserVisitor<? extends T>)visitor).visitId(this);
			else return visitor.visitChildren(this);
		}
	}

	public final IdContext id() throws RecognitionException {
		IdContext _localctx = new IdContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_id);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(127);
			match(ID);
			setState(131);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case CLASE:
				{
				setState(128);
				clase();
				}
				break;
			case PROPIEDAD:
				{
				setState(129);
				propiedad();
				}
				break;
			case RELACION:
				{
				setState(130);
				relacion();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class NameContext extends ParserRuleContext {
		public TerminalNode NAME() { return getToken(gjsonbParser.NAME, 0); }
		public TerminalNode TEXTO() { return getToken(gjsonbParser.TEXTO, 0); }
		public NameContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_name; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof gjsonbParserVisitor ) return ((gjsonbParserVisitor<? extends T>)visitor).visitName(this);
			else return visitor.visitChildren(this);
		}
	}

	public final NameContext name() throws RecognitionException {
		NameContext _localctx = new NameContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_name);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(133);
			match(NAME);
			setState(134);
			match(TEXTO);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class LabelContext extends ParserRuleContext {
		public TerminalNode LABEL() { return getToken(gjsonbParser.LABEL, 0); }
		public TerminalNode LLAVEA() { return getToken(gjsonbParser.LLAVEA, 0); }
		public TerminalNode LLAVEC() { return getToken(gjsonbParser.LLAVEC, 0); }
		public List<TerminalNode> ES() { return getTokens(gjsonbParser.ES); }
		public TerminalNode ES(int i) {
			return getToken(gjsonbParser.ES, i);
		}
		public List<TextoEsContext> textoEs() {
			return getRuleContexts(TextoEsContext.class);
		}
		public TextoEsContext textoEs(int i) {
			return getRuleContext(TextoEsContext.class,i);
		}
		public List<TerminalNode> ENG() { return getTokens(gjsonbParser.ENG); }
		public TerminalNode ENG(int i) {
			return getToken(gjsonbParser.ENG, i);
		}
		public List<TextoInContext> textoIn() {
			return getRuleContexts(TextoInContext.class);
		}
		public TextoInContext textoIn(int i) {
			return getRuleContext(TextoInContext.class,i);
		}
		public LabelContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_label; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof gjsonbParserVisitor ) return ((gjsonbParserVisitor<? extends T>)visitor).visitLabel(this);
			else return visitor.visitChildren(this);
		}
	}

	public final LabelContext label() throws RecognitionException {
		LabelContext _localctx = new LabelContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_label);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			{
			setState(136);
			match(LABEL);
			setState(137);
			match(LLAVEA);
			setState(144);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==ES || _la==ENG) {
				{
				setState(142);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case ES:
					{
					{
					setState(138);
					match(ES);
					setState(139);
					textoEs();
					}
					}
					break;
				case ENG:
					{
					{
					setState(140);
					match(ENG);
					setState(141);
					textoIn();
					}
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				setState(146);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(147);
			match(LLAVEC);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PropertiesContext extends ParserRuleContext {
		public TerminalNode PROPERTIES() { return getToken(gjsonbParser.PROPERTIES, 0); }
		public List<PropContext> prop() {
			return getRuleContexts(PropContext.class);
		}
		public PropContext prop(int i) {
			return getRuleContext(PropContext.class,i);
		}
		public PropertiesContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_properties; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof gjsonbParserVisitor ) return ((gjsonbParserVisitor<? extends T>)visitor).visitProperties(this);
			else return visitor.visitChildren(this);
		}
	}

	public final PropertiesContext properties() throws RecognitionException {
		PropertiesContext _localctx = new PropertiesContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_properties);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(149);
			match(PROPERTIES);
			setState(153);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==TEXTO) {
				{
				{
				setState(150);
				prop();
				}
				}
				setState(155);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PropContext extends ParserRuleContext {
		public TerminalNode TEXTO() { return getToken(gjsonbParser.TEXTO, 0); }
		public PropContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_prop; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof gjsonbParserVisitor ) return ((gjsonbParserVisitor<? extends T>)visitor).visitProp(this);
			else return visitor.visitChildren(this);
		}
	}

	public final PropContext prop() throws RecognitionException {
		PropContext _localctx = new PropContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_prop);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(156);
			match(TEXTO);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ReverseNameContext extends ParserRuleContext {
		public TerminalNode REVERSENAME() { return getToken(gjsonbParser.REVERSENAME, 0); }
		public TerminalNode TEXTO() { return getToken(gjsonbParser.TEXTO, 0); }
		public ReverseNameContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_reverseName; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof gjsonbParserVisitor ) return ((gjsonbParserVisitor<? extends T>)visitor).visitReverseName(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ReverseNameContext reverseName() throws RecognitionException {
		ReverseNameContext _localctx = new ReverseNameContext(_ctx, getState());
		enterRule(_localctx, 24, RULE_reverseName);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(158);
			match(REVERSENAME);
			setState(159);
			match(TEXTO);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class LabelReverseNameContext extends ParserRuleContext {
		public TerminalNode LABELREVERSENAME() { return getToken(gjsonbParser.LABELREVERSENAME, 0); }
		public TerminalNode LLAVEA() { return getToken(gjsonbParser.LLAVEA, 0); }
		public TerminalNode LLAVEC() { return getToken(gjsonbParser.LLAVEC, 0); }
		public List<TerminalNode> ES() { return getTokens(gjsonbParser.ES); }
		public TerminalNode ES(int i) {
			return getToken(gjsonbParser.ES, i);
		}
		public List<TextoEsReverseContext> textoEsReverse() {
			return getRuleContexts(TextoEsReverseContext.class);
		}
		public TextoEsReverseContext textoEsReverse(int i) {
			return getRuleContext(TextoEsReverseContext.class,i);
		}
		public List<TerminalNode> ENG() { return getTokens(gjsonbParser.ENG); }
		public TerminalNode ENG(int i) {
			return getToken(gjsonbParser.ENG, i);
		}
		public List<TextoInReverseContext> textoInReverse() {
			return getRuleContexts(TextoInReverseContext.class);
		}
		public TextoInReverseContext textoInReverse(int i) {
			return getRuleContext(TextoInReverseContext.class,i);
		}
		public LabelReverseNameContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_labelReverseName; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof gjsonbParserVisitor ) return ((gjsonbParserVisitor<? extends T>)visitor).visitLabelReverseName(this);
			else return visitor.visitChildren(this);
		}
	}
